GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_anim2d_play", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim2d_play(uint e, string stateName);

    [LibraryImport(Lib, EntryPoint = "dse_anim2d_play_segment")]
    internal static partial void dse_anim2d_play_segment(uint e, int startFrame, int endFrame, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_anim2d_pop_event")]
    internal static partial int dse_anim2d_pop_event(uint e, [Out] byte[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_add(uint e, string danimPath, string dskelPath);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_set_state", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_set_state(uint e, string stateName, float speed, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_get_state")]
    internal static partial int dse_anim3d_get_state(uint e, [Out] byte[] outState, int stateCap, out float outNorm, out float outTime, out float outSpeed, out int outLoop, out int outTransitioning, out int outBoneCount, out int outHasSkel);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_init_fsm")]
    internal static partial void dse_anim3d_init_fsm(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_add_fsm_state", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_add_fsm_state(uint e, string stateName, string danimPath, int loop, float speed);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_add_transition", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_add_transition(uint e, string fromState, string toState, float transitionDuration, int hasExitTime, float exitTime, int condCount, string[] condNames, int[] condModes, float[] condThresholds, int[] condInts);

    [LibraryImport(Lib, EntryPoint = "dse_compat_anim3d_init_fsm", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_compat_anim3d_init_fsm(uint e, string defaultState);

    [LibraryImport(Lib, EntryPoint = "dse_compat_anim3d_add_transition", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_compat_anim3d_add_transition(uint e, string fromState, string toState, float transitionDuration, int hasExitTime, float exitTime);

    [LibraryImport(Lib, EntryPoint = "dse_compat_weather_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_compat_weather_add(uint e, string type, float intensity);

    [LibraryImport(Lib, EntryPoint = "dse_compat_set_directional_light_3d")]
    internal static partial void dse_compat_set_directional_light_3d(uint e, int enabled, float dx, float dy, float dz, float r, float g, float b, float intensity, float ambient, float shadowStrength);

    [LibraryImport(Lib, EntryPoint = "dse_compat_set_point_light_3d")]
    internal static partial void dse_compat_set_point_light_3d(uint e, float r, float g, float b, float intensity, float radius);

    [LibraryImport(Lib, EntryPoint = "dse_compat_set_spot_light_3d")]
    internal static partial void dse_compat_set_spot_light_3d(uint e, float dx, float dy, float dz, float r, float g, float b, float intensity, float radius, float inner, float outer);

    [LibraryImport(Lib, EntryPoint = "dse_compat_world_to_screen")]
    internal static partial void dse_compat_world_to_screen(float wx, float wy, float wz, out float outSx, out float outSy, out int outVisible);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_set_param_float", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_set_param_float(uint e, string paramName, float value);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_set_param_trigger", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_set_param_trigger(uint e, string paramName);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_set_lock_root_motion")]
    internal static partial void dse_anim3d_set_lock_root_motion(uint e, int @lock);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_add_event", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_anim3d_add_event(uint e, string eventName, float triggerTime);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_pop_event")]
    internal static partial int dse_anim3d_pop_event(uint e, [Out] byte[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_set_extract_root_motion")]
    internal static partial void dse_anim3d_set_extract_root_motion(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_anim3d_get_root_motion_delta")]
    internal static partial int dse_anim3d_get_root_motion_delta(uint e, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_add_component")]
    internal static partial void dse_animlayer_add_component(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_animlayer_add(uint e, string name, float weight, int blendMode);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_set_clip", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_animlayer_set_clip(uint e, int idx, string danimPath, float speed, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_set_weight")]
    internal static partial void dse_animlayer_set_weight(uint e, int idx, float w);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_set_bone_mask", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_animlayer_set_bone_mask(uint e, int idx, string[] bones, int count);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_set_blend_tree_1d", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_animlayer_set_blend_tree_1d(uint e, int idx, string[] paths, float[] thresholds, float[] speeds, int count);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_set_blend_param")]
    internal static partial void dse_animlayer_set_blend_param(uint e, int idx, float val);

    [LibraryImport(Lib, EntryPoint = "dse_animlayer_set_enabled")]
    internal static partial void dse_animlayer_set_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_ik_add_component")]
    internal static partial void dse_ik_add_component(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ik_add_chain", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_ik_add_chain(uint e, string name, int type, string rootBone, string tipBone, float weight);

    [LibraryImport(Lib, EntryPoint = "dse_ik_set_target")]
    internal static partial void dse_ik_set_target(uint e, int idx, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_ik_set_target_entity")]
    internal static partial void dse_ik_set_target_entity(uint e, int idx, uint target);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_skeleton")]
    internal static partial void dse_mesh_renderer_set_skeleton(uint e, uint skeletonEntity);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_get_skeleton")]
    internal static partial uint dse_mesh_renderer_get_skeleton(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_ik_set_weight")]
    internal static partial void dse_ik_set_weight(uint e, int idx, float w);

    [LibraryImport(Lib, EntryPoint = "dse_ik_set_pole_vector")]
    internal static partial void dse_ik_set_pole_vector(uint e, int idx, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_ik_set_iterations")]
    internal static partial void dse_ik_set_iterations(uint e, int idx, int iters);

    [LibraryImport(Lib, EntryPoint = "dse_ik_set_enabled")]
    internal static partial void dse_ik_set_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_foot_ik_add_component")]
    internal static partial void dse_foot_ik_add_component(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foot_ik_add_foot", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_foot_ik_add_foot(uint e, string name, string footBone, string hipBone, float footHeight, float maxGroundDistance, float blendSpeed, float weight);

    [LibraryImport(Lib, EntryPoint = "dse_foot_ik_set_foot_weight")]
    internal static partial void dse_foot_ik_set_foot_weight(uint e, int idx, float w);

    [LibraryImport(Lib, EntryPoint = "dse_foot_ik_set_foot_height")]
    internal static partial void dse_foot_ik_set_foot_height(uint e, int idx, float h);

    [LibraryImport(Lib, EntryPoint = "dse_foot_ik_set_pelvis")]
    internal static partial void dse_foot_ik_set_pelvis(uint e, float pelvisWeight, float maxPelvisOffset);

    [LibraryImport(Lib, EntryPoint = "dse_foot_ik_set_enabled")]
    internal static partial void dse_foot_ik_set_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_bone_attach_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_bone_attach_add(uint e, uint target, string boneName);

    [LibraryImport(Lib, EntryPoint = "dse_bone_attach_set_offset")]
    internal static partial void dse_bone_attach_set_offset(uint e, float px, float py, float pz, float qx, float qy, float qz, float qw, float sx, float sy, float sz);

    [LibraryImport(Lib, EntryPoint = "dse_bone_attach_set_bone", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_bone_attach_set_bone(uint e, string boneName);

    [LibraryImport(Lib, EntryPoint = "dse_bone_attach_set_target")]
    internal static partial void dse_bone_attach_set_target(uint e, uint target);

    [LibraryImport(Lib, EntryPoint = "dse_bone_attach_get_world_pos", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_bone_attach_get_world_pos(uint target, string boneName, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_bone_attach_remove")]
    internal static partial void dse_bone_attach_remove(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_morph_add_component")]
    internal static partial void dse_morph_add_component(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_morph_add_target", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_morph_add_target(uint e, string name, float[] deltas, int floatCount);

    [LibraryImport(Lib, EntryPoint = "dse_morph_set_weight", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_morph_set_weight(uint e, string name, float w);

    [LibraryImport(Lib, EntryPoint = "dse_morph_set_weight_index")]
    internal static partial void dse_morph_set_weight_index(uint e, int idx, float w);

    [LibraryImport(Lib, EntryPoint = "dse_morph_get_weight", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial float dse_morph_get_weight(uint e, string name);

    [LibraryImport(Lib, EntryPoint = "dse_morph_get_target_count")]
    internal static partial int dse_morph_get_target_count(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_particle_system_3d_add")]
    internal static partial void dse_particle_system_3d_add(uint e, int maxParticles, float emissionRate);

    [LibraryImport(Lib, EntryPoint = "dse_particle_system_3d_set_params", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_particle_system_3d_set_params(uint e, float lifeMin, float lifeMax, float sizeMin, float sizeMax, float speedMin, float speedMax, float r, float g, float b, float a, float gx, float gy, float gz, string texturePath);
